# deluge-export

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/deluge_export/: cli.py  client.py  config.py  extractor.py
tests/: test_cli.py  test_client.py  test_config.py  test_extractor.py
